<resources>
    <string name="app_name">Volleyball Referee</string>
    <string name="rn_30801" translatable="false">
        New in this release:
        \n\n\u2022 Fixed a performance issue when inputting player names
        \n\n\u2022 Fixed a scrolling issue when viewing rules
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="resume">Resume</string>
    <string name="delete">Delete</string>
    <string name="ignore">Ignore</string>
    <string name="accept">Accept</string>
    <string name="reject">Discard</string>
    <string name="remove">Remove</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="undo">Undo</string>
    <string name="next">Next</string>
    <string name="volleyball_game">Indoor volleyball</string>
    <string name="beach_volleyball_game">Beach Volleyball</string>
    <string name="snow_volleyball_game">Snow Volleyball</string>
    <string name="score_based_game">Scoreboard</string>
    <string name="time_based_game">Time-based</string>
    <string name="resume_game_title">Resume match</string>
    <string name="resume_game_question">The application found a match in progress. Do you wish to resume it or to delete it?</string>
    <string name="resume_game_error">The match could not be resumed.</string>
    <string name="my_data_group">My data</string>
    <string name="configuration_group">Configuration</string>
    <string name="completed_games">Completed matches</string>
    <string name="available_games">Scheduled &amp; live matches</string>
    <string name="teams">Teams</string>
    <string name="rules">Rules</string>
    <string name="colleagues">Colleagues</string>
    <string name="live_games_vbr_com">All live matches on website</string>
    <string name="my_account">My account</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="purchase">Purchase</string>
    <string name="already_purchased">Already purchased</string>
    <string name="purchase_web_premium_summary">
        \n\u2022 Keep your games, teams and rules synchronized between your devices.
        \n\u2022 Enjoy the unlimited storage for your data and the better streaming quality for your live games.
        \n\u2022 Schedule your games to be played later.
        \n\u2022 Deleted your game by mistake? Resume your games from the server backup.
        \n\u2022 Benefit automatically from the future new web features.
    </string>
    <string name="purchase_score_sheets_summary">
        \n\u2022 Add referees, scorer, captains and coaches signatures
        \n\u2022 Add your federation logo
        \n\u2022 Add remarks
        \n\u2022 Save to PDF format
        \n\u2022 Share
    </string>
    <string name="user_sign_in">Sign in</string>
    <string name="user_sign_up">Sign up</string>
    <string name="user_password_update">Update my password</string>
    <string name="user_lost_password">Lost my password</string>
    <string name="user_sign_out">Sign out</string>
    <string name="user_sign_in_why_title">Why do I have to sign in?</string>
    <string name="user_sign_in_why_message">Your Volleyball Referee data (games, teams, rules, leagues, colleagues) will be synchronized with our server. By signing in, we will know who you are and we will keep your data associated with your account.</string>
    <string name="user_pseudo_hint">Referee pseudonym</string>
    <string name="user_email_hint">Email</string>
    <string name="user_confirm_email_hint">Confirm email</string>
    <string name="user_email_not_matching">Email addresses don\'t match</string>
    <string name="user_current_password_hint">Current password</string>
    <string name="user_password_hint">Password</string>
    <string name="user_confirm_password_hint">Confirm password</string>
    <string name="user_new_password_hint">New password</string>
    <string name="user_confirm_new_password_hint">Confirm new password</string>
    <string name="user_password_not_matching">Passwords don\'t match</string>
    <string name="user_password_error">Wrong password</string>
    <string name="user_locked_error">Subscription is expired or account is locked for 30 minutes after too many failed attempts to sign in</string>
    <string name="user_email_pseudo_conflict">This referee pseudonym or this email already exist</string>
    <string name="user_request_error">Error while processing request</string>
    <string name="user_signed_in_as_pseudo">Signed in as %s</string>
    <string name="user_password_recovery_initiated">A recovery link was sent by email to %s</string>
    <string name="password_strength">The password must contain at least 8 characters, including 1 uppercase character, 1 digit, and 1 special character</string>
    <string name="password_strength_error">Password does not satisfy the aforementioned criteria</string>
    <string name="user_signed_out">Signed out</string>
    <string name="search_colleague">Search in colleagues</string>
    <string name="add_colleague">Connect with a referee</string>
    <string name="received_colleague_request">You received a connection request from %s</string>
    <string name="sent_colleague_request">You sent a connection request to %s</string>
    <string name="pending">Pending</string>
    <string name="accept_colleague_question">Accept %s\'s request to connect?</string>
    <string name="reject_colleague_question">Discard %s\'s request to connect?</string>
    <string name="remove_colleague_question">Remove %s?</string>
    <string name="game_setup_title">Setup game</string>
    <string name="home_team_tab">Home team</string>
    <string name="home_team_hint">Home team name</string>
    <string name="guest_team_tab">Guest team</string>
    <string name="guest_team_hint">Guest team name</string>
    <string name="select_players">Select the players</string>
    <string name="select_players_with_liberos">Select the players (including the liberos)</string>
    <string name="select_shirts_color">Select the shirts colour</string>
    <string name="select_captain">Select the captain</string>
    <string name="select_libero">Select the liberos (optional)</string>
    <string name="select_gender">Select the gender</string>
    <string name="input_player_names">Input the player names (optional)</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_game_setup_question">Do you confirm this setup?</string>
    <string name="gender_description">Gender</string>
    <string name="match_duration_text">Select the match duration</string>
    <string name="league_name">League / tournament name</string>
    <string name="division_name">Division / pool name</string>
    <string name="misc_tab">Misc.</string>
    <string name="rules_tab">Rules</string>
    <string name="teams_tab">Teams</string>
    <string name="referee">Referee</string>
    <string name="leave_game_setup_question">This match setup will be lost. Leave anyway?</string>
    <string name="must_provide_at_least_n_characters">You must provide at least %d characters</string>
    <string name="help">Help</string>
    <string name="toss_tails">Tails</string>
    <string name="toss_heads">Heads</string>
    <string name="toss_coin">Toss a coin</string>
    <string name="swap_first_service">Swap first service</string>
    <string name="navigate_home">Back to home page</string>
    <string name="reset_set">Reset current set</string>
    <string name="reset_set_question">The current set will be restarted and every actions will be lost. Reset?</string>
    <string name="share">Share</string>
    <string name="share_exception">Failed to share the game</string>
    <string name="navigate_home_question">You may resume the current match later. Leave?</string>
    <string name="select_player_title">Select a player from the bench</string>
    <string name="court_position_tab">Positions</string>
    <string name="ladder_tab">Points</string>
    <string name="substitutions_tab">Substitutions</string>
    <string name="timeouts_tab">Timeouts</string>
    <string name="set_number">Set %d</string>
    <string name="set_duration">%d min</string>
    <string name="switch_sides">Switch court</string>
    <string name="won_game">%s won the match</string>
    <string name="timeout_title">Timeout (%s)</string>
    <string name="timeout_question">Call a timeout?</string>
    <string name="technical_timeout_title">Technical timeout</string>
    <string name="game_interval_title">Game interval</string>
    <string name="skip">Skip</string>
    <string name="run_background">Run in background</string>
    <string name="switch_sides_description">Manually switch court</string>
    <string name="remove_point_description">Remove last point</string>
    <string name="call_timeout_description">Call timeout</string>
    <string name="match_point">Match point</string>
    <string name="set_point">Set point</string>
    <string name="confirm_lineup_title">Starting line-up</string>
    <string name="confirm_team_lineup_question">Do you confirm this starting line-up for %s in this set?</string>
    <string name="no_substitution_message">No substitution available</string>
    <string name="confirm_set_question">Do you confirm this point?</string>
    <string name="start_match_description">Start the match</string>
    <string name="stop_match_description">Stop the match</string>
    <string name="confirm_start_match_question">Do you want to start the match?</string>
    <string name="confirm_stop_match_question">Do you want to stop the match?</string>
    <string name="index_game">Toggle public / private match</string>
    <string name="public_game_message">The match is now public</string>
    <string name="private_game_message">The match is now private</string>
    <string name="all_timeouts_called">%s has no more available timeout</string>
    <string name="all_substitutions_used">%s has no more available substitution</string>
    <string name="one_remaining_substitution">%s has one remaining substitution</string>
    <string name="sanctions_tab">Sanctions</string>
    <string name="sanction">Sanction (%s)</string>
    <string name="delay_sanction">Delay</string>
    <string name="misconduct_sanction">Misconduct</string>
    <string name="yellow_card">Simple warning</string>
    <string name="red_card">A point and service to the opponent</string>
    <string name="red_card_expulsion">Expulsion for the remainder of the set</string>
    <string name="red_card_disqualification">Disqualification for the remainder of the match</string>
    <string name="coach_abbreviation">C.</string>
    <string name="set_lost_incomplete">%s lost the set because the team is incomplete</string>
    <string name="match_lost_incomplete">%s lost the match because the team is incomplete</string>
    <string name="position_1_title">I</string>
    <string name="position_2_title">II</string>
    <string name="position_3_title">III</string>
    <string name="position_4_title">IV</string>
    <string name="position_5_title">V</string>
    <string name="position_6_title">VI</string>
    <string name="substitution">Substitution</string>
    <string name="sporty_spinner_court_label">Select a court</string>
    <string name="sporty_spinner_day_label">Select a day</string>
    <string name="sporty_spinner_state_label">Select a state</string>
    <string name="sporty_filter_games">Filter games</string>
    <string name="sporty_category">Category</string>
    <string name="sporty_phase">Phase</string>
    <string name="sporty_team_1">Team #1</string>
    <string name="sporty_team_2">Team #2</string>
    <string name="sporty_game_counter" translatable="false">0 - 0 - 0</string>
    <string name="sporty_game_date_and_hour" translatable="false">15/05/2024 - 12:00:00</string>
    <string name="sporty_game_state">Pending</string>
</resources>