<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin_size"
    android:layout_gravity="center"
    style="@style/AppTheme.RoundedCard">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/big_margin_size">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_margin_size">

        <TextView
            android:id="@+id/item_sporty_game_tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sporty_category"
            android:padding="@dimen/default_margin_size"
            android:background="@drawable/blue_chip_icon_background"
            android:textColor="@color/colorOnPrimary" />

            <TextView
                android:id="@+id/item_sporty_game_tv_phase"
                style="@style/AppTheme.BlueTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sporty_phase"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/big_margin_size"
            android:layout_marginBottom="@dimen/default_margin_size"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:layout_marginBottom="@dimen/default_margin_size">

                <TextView
                    android:id="@+id/item_sporty_game_tv_team1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sporty_team_1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sporty_game_counter"
                    android:id="@+id/item_sporty_game_tv_score1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/item_sporty_game_tv_team2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sporty_team_2"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sporty_game_counter"
                    android:id="@+id/item_sporty_game_tv_score2"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_sporty_game_tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sporty_game_state"/>

            <TextView
                android:id="@+id/item_sporty_game_tv_date_and_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sporty_game_date_and_hour"
                style="@style/AppTheme.BlueTitle"/>

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>